# fastapi-notes

./: .gitignore  README.md  blog.db  main.py  pyproject.toml
app/: main.py
app/api/posts/: repository.py  router.py  schemas.py
app/api/v1/auth/: repository.py  router.py  schemas.py
app/api/v1/categories/: repository.py  router.py  schemas.py
app/api/v1/posts/: repository.py  router.py  schemas.py
app/api/v1/tags/: repository.py  router.py  schemas.py
app/api/v1/uploads/: router.py
app/core/: config.py  db.py  middleware.py  security.py
app/models/: __init__.py  author.py  category.py  post.py  tag.py  user.py
app/seeds/: run.py  services.py
app/services/: file_storage.py  pagination.py
app/utils/: slugify_utils.py
